
PROJECT(config++)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
AUX_SOURCE_DIRECTORY(dir SOURCEFILES)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLIBCONFIGXX_EXPORTS -DLIBCONFIG_STATIC")
set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -DLIBCONFIGXX_EXPORTS -DLIBCONFIG_STATIC")
ADD_LIBRARY(config++ STATIC
grammar.c
libconfig.c
libconfigcpp.cc
scanctx.c
scanner.c
strbuf.c
)





